Added POST functionality to markdown handler, to separate create/update operations
- updated create.html to call POST instead of PUT
- created new update.html to call PUT
- updated markdown handler to have a new POST handling, and to check that:
   file does not yet exist when POSTing
   file already exists when PUT-ing
- updated markdown handler tests and integration tests accordingly
- added more coverage for markdown unit tests corresponding to the changes made

All local builds (clean_build, clean_coverage, start_docker) successful

Change-Id: I2ab80034c9583bd3daee06152f1b438994890d13

--- a/files/markdown-pages/update.html
+++ b/files/markdown-pages/update.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Create Markdown File</title>
+        <title>Update Markdown File</title>
         <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bangers" />
         <link rel="stylesheet" href="styles.css">
@@ -20,7 +20,7 @@
                 let file = getMarkdownFileContents();
                 let file_length = file.length;
                 fetch(targetURL, {
-                    method: "POST",
+                    method: "PUT",
                     body: file,
                     headers: {
                         "Content-type": "text/markdown",
@@ -30,7 +30,7 @@
                     if(response.ok) {
                         const targetURL = getTargetURL();
                         document.getElementById("header").innerHTML = "Success!";
-                        document.getElementById("contents").innerHTML = "See your new markdown file here:";
+                        document.getElementById("contents").innerHTML = "See your updated markdown file here:";
                         let link = document.createElement("a");
                         link.innerHTML = targetURL;
                         link.href = targetURL;
@@ -39,7 +39,7 @@
                     }
                     else {
                         document.getElementById("header").innerHTML = "Error:";
-                        document.getElementById("contents").innerHTML = "We couldn't create your HTML file";
+                        document.getElementById("contents").innerHTML = "We couldn't update your HTML file";
                     }
                 })
             }
@@ -48,11 +48,11 @@
     <body>
         <header>
             <h1 id="header">
-                Create a Markdown file!
+                Update a Markdown file!
             </h1>
             <div id="inputbuttons">
                 <input placeholder="Markdown File Name" id="md-file-name">
-                <button onclick="submitMarkdown()">Create!</button>
+                <button onclick="submitMarkdown()">Update!</button>
             </div>
         </header>
         <main>
