--- a/tests/markdown/sample.html
+++ b/tests/markdown/sample.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<link rel="stylesheet" href="stylesheet">
+</head>
+<body>
 <h1>h1</h1>
 <h2>h2</h2>
 <h3>h3</h3>
@@ -104,3 +110,5 @@ break
 <p>and easy email addresses <a href="mailto:mbx@cs.ucla.edu">mbx@cs.ucla.edu</a> and easy urls <a href="https://www.markdownguide.org">https://www.markdownguide.org</a>
 unfortunately, we can't make the links reference-style</p>
 <p>and we can have inline html like <b>this</b></p>
+</body>
+</html>
