--- a/files/markdown-pages/update.html
+++ b/files/markdown-pages/update.html
@@ -7,7 +7,6 @@
         <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bangers" />
         <link rel="stylesheet" href="styles.css">
-        <script src="utils.js"></script>
         <script>
             function getTargetURL() {
                 let doc = document.getElementById("md-file-name").value;
@@ -28,29 +27,21 @@
                         "Content-length": file_length
                     }
                 }).then((response) => {
-                    return [response.ok, response.text()];
-                }).then(([ok, text]) => {
-                    let header = document.getElementById("header");
-                    let contents = document.getElementById("contents");
-                    contents.innerHTML = "";
-                    let message = document.createElement("h2");
-                    contents.appendChild(message);
-                    if(ok) {
+                    if(response.ok) {
                         const targetURL = getTargetURL();
-                        header.innerHTML = "Success!";
-                        message.innerHTML = "See your updated markdown file here:";
+                        document.getElementById("header").innerHTML = "Success!";
+                        document.getElementById("contents").innerHTML = "See your updated markdown file here:";
                         let link = document.createElement("a");
                         link.innerHTML = targetURL;
                         link.href = targetURL;
                         link.target = "_blank";
-                        message.appendChild(link);
+                        document.body.appendChild(link);
                     }
                     else {
-                        header.innerHTML = "Error:";
-                        message.appendChild(text);
+                        document.getElementById("header").innerHTML = "Error:";
+                        document.getElementById("contents").innerHTML = "We couldn't update your HTML file";
                     }
-                    add_redirection_links();
-                });
+                })
             }
         </script>
     </head>
@@ -66,13 +57,7 @@
         </header>
         <main>
             <div id="contents">
-                <textarea 
-                    id="md-file-contents" 
-                    cols=100 
-                    rows = 50 
-                    placeholder="Markdown File Contents"
-                    value=""
-                ></textarea>
+                <textarea id="md-file-contents" cols=100 rows = 50 placeholder="Markdown File Contents"></textarea>
             </div>
         </main>
     </body>
